--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>For loops are useful in making manual work automated.</li>
+          <li>Array is used to hold a group of data.</li>
         </ul>
       </section>
     </main>
