--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <ul>
           <li>The head element contains information about the webpage.</li>
           <li>The body element represents the visible content shown to the user.</li>
+          <li>The title element changes the name of the webpage.</li>
+          <li>The script element embeds client side scripts onto the HTML document.</li>
+          <li>The link element connects external resources to the HTML document.</li>
+          <li>The style tag defines CSS styles for a website.</li>
+          <li>The base element defines the base URL for a webpage.</li>
         </ul>    
       </section>
    
@@ -38,6 +43,10 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A: this adds all files to staging</li>
+          <li>git commit -m "message": this commits staged files to branch</li>
+          <li>git push origin branch: pushes committed files to a branch</li>
+          <li>git pull origin branch: pulls all changes from branch</li>
         </ul>
       </section>
    
