Updated Git section with full stops

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
-          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>git add -A: this adds all files to staging</li>
-          <li>git commit -m "message": this commits staged files to branch</li>
-          <li>git push origin branch: pushes committed files to a branch</li>
-          <li>git pull origin branch: pulls all changes from branch</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git add -A: this adds all files to staging.</li>
+          <li>git commit -m "message": this commits staged files to branch.</li>
+          <li>git push origin branch: pushes committed files to a branch.</li>
+          <li>git pull origin branch: pulls all changes from branch.</li>
         </ul>
       </section>
    
